- fix: resctricting height of pallet selection pulldown, showing vertical scrollbar if needed

--- a/public/stylesheets/pallet_main.css
+++ b/public/stylesheets/pallet_main.css
@@ -496,3 +496,9 @@ hr.overlay_35 {
   width: auto;
   margin: auto;
 }
+
+.fg-menu-container {
+  max-height: 600px;
+  overflow: auto;
+  overflow-x: hidden;
+}
